--- a/Algorithm_3.0.csproj
+++ b/Algorithm_3.0.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Algorithm_3._0</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
+  </ItemGroup>
+
 </Project>
